Fixed issue where titles on mobile had a green background and blue text. v1.0.13

--- a/src/url-meta.css
+++ b/src/url-meta.css
@@ -86,6 +86,10 @@
     margin: 5px 0;
 }
 
+.url-meta-container-title-link {
+    color: inherit;
+}
+
 .url-meta-container-footer {
     border-top: 2px solid;
     padding: 5px 5px 5px 10px;
